--- a/xstream-hibernate/pom.xml
+++ b/xstream-hibernate/pom.xml
@@ -91,6 +91,25 @@
         </plugins>
       </build>
     </profile>
+    <profile>
+      <id>tests</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+        <property>
+          <name>maven.test.skip</name>
+          <value>false</value>
+        </property>
+      </activation>
+      <dependencies>
+        <dependency>
+          <groupId>org.jetbrains.teamcity.xstream</groupId>
+          <artifactId>xstream</artifactId>
+          <classifier>tests</classifier>
+          <type>test-jar</type>
+          <scope>test</scope>
+        </dependency>
+      </dependencies>
+    </profile>
   </profiles>
 
   <build>
@@ -139,12 +158,6 @@
   </reporting>
 
   <dependencies>
-    <dependency>
-      <groupId>org.jetbrains.teamcity.xstream</groupId>
-      <artifactId>xstream</artifactId>
-      <classifier>tests</classifier>
-      <type>test-jar</type>
-    </dependency>
     <dependency>
       <groupId>org.jetbrains.teamcity.xstream</groupId>
       <artifactId>xstream</artifactId>
