--- a/xstream-hibernate/pom.xml
+++ b/xstream-hibernate/pom.xml
@@ -94,7 +94,7 @@
     <profile>
       <id>tests</id>
       <activation>
-        <activeByDefault>true</activeByDefault>
+        <activeByDefault>false</activeByDefault>
         <property>
           <name>maven.test.skip</name>
           <value>false</value>
